--- a/Final_Project/src/userinterface/AnalysisMode/AnalysisMode.form
+++ b/Final_Project/src/userinterface/AnalysisMode/AnalysisMode.form
@@ -339,7 +339,7 @@
                         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Store comparison that fed maximum number of people across different cities"/>
+                        <Property name="text" type="java.lang.String" value="Store comparison that fed people across different cities"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JButton" name="btnResultQuestion3">
@@ -437,7 +437,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="357" max="32767" attributes="0"/>
+                              <EmptySpace pref="239" max="32767" attributes="0"/>
                               <Component id="btnResultQuestion4" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
@@ -465,7 +465,7 @@
                         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Comparison of donation received from Hotel vs Event"/>
+                        <Property name="text" type="java.lang.String" value="Comparison of donation received from Individual vs Hotel vs Event"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JButton" name="btnResultQuestion4">
